<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata_light"
        android:text="@string/choose_your_difficulty_affects_piece_count"
        app:layout_constraintBottom_toTopOf="@+id/start_new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficulty_easy"
        style="@style/TextButton"
        android:layout_marginEnd="16dp"
        android:text="@string/difficulty_easy"
        android:textColor="@color/difficulty_easy"
        android:textSize="20sp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/difficulty_normal"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:id="@+id/difficulty_normal"
        style="@style/TextButton"
        android:text="@string/difficulty_normal"
        android:textColor="@color/difficulty_normal"
        android:textSize="20sp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:id="@+id/difficulty_hard"
        style="@style/TextButton"
        android:layout_marginStart="16dp"
        android:text="@string/difficulty_hard"
        android:padding="4dp"
        android:textColor="@color/difficulty_hard"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/difficulty_normal"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <TextView
        android:id="@+id/start_new_game"
        style="@style/TextButton"
        app:layout_constraintBottom_toTopOf="@id/show_high_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/show_high_scores"
        style="@style/TextButton"
        android:text="@string/high_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_new_game" />

</androidx.constraintlayout.widget.ConstraintLayout>
