<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/enter_guess_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attempt_count"
        app:spanCount="4"
        tools:itemCount="8"
        tools:listitem="@layout/item_game_piece" />

    <TextView
        android:id="@+id/attempts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/attempts"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/attempt_count"
        app:layout_constraintStart_toStartOf="@+id/attempt_count"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Attempts" />

    <TextView
        android:id="@+id/attempt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inconsolata_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attempts_label"
        tools:text="/05/" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/game_timer"
        app:layout_constraintStart_toStartOf="@+id/game_timer"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Time" />

    <TextView
        android:id="@+id/game_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inconsolata_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_label"
        tools:text="|00:01:001|" />

    <TextView
        android:id="@+id/enter_guess_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:labelFor="@id/input"
        android:text="@string/enter_guess"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input" />

    <EditText
        android:id="@+id/input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text=""
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1459" />

    <TextView
        android:id="@+id/submit"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/end_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/end_game"
        style="@style/TextButton"
        android:layout_marginBottom="12dp"
        android:text="@string/quit"
        android:textColor="@color/color_red_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
